2010-04-03  Raúl Mateos <raulofpandora@gmail.com>

	* operation/events/event_statistics.php: Updated year and headers. There
	is a black space after the headers that should be avoided. Same to the
	events.php file.

2010-03-31  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_visual_map.php: in function "printItemInVisualConsole"
	changed the text align of elements label to center.
	
	* operation/visual_console/render_view.php: changed the title to Pandora's
	header.
	
	* godmode/reporting/visual_console_builder.php: fixed the id of visual
	console in the update wizard action.
	
	* godmode/reporting/visual_console_builder.editor.php: small changes in the
	style. Set the width and height for module graph.
	
	* godmode/reporting/visual_console_builder.editor.js: set the default value
	for width and height for module graph in the function "cleanFields". And in
	the function "createItem" deleted br tag the simple value.

2010-03-31  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: added new parameter for function
	"print_select" for style. In the function "print_input_hidden" added the
	parameter $class for set the class of input.
	
	* godmode/reporting/map_builder.php: delete old code, now it have only
	source code of paint list of visual consoles.
	
	* godmode/reporting/visual_console_builder.data.php: cleaned style the of
	form.
	
	* godmode/reporting/visual_console_builder.elements.php: cleaned the rows of
	table, delete label color field and change the text type for a icon.

2010-03-31  Miguel de Dios  <miguel.dedios@artica.es>

	* include/styles/pandora.css, include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php,
	godmode/reporting/visual_console_builder.editor.php,
	godmode/reporting/visual_console_builder.editor.js: cleaned source code and
	changed the buttons.

2010-03-30  Miguel de Dios  <miguel.dedios@artica.es>

	* include/ajax/visual_console_builder.ajax.php: some cleaned the source