@@ -13,7 +13,9 @@
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 // GNU General Public License for more details.
 
+global $config;
 
+// Login check
 check_login ();
 
 require_once ("include/functions_agents.php");
